View Issue Details

IDProjectCategoryView StatusLast Update
0033304Open CASCADEOCCT:Modeling Datapublic2023-03-07 14:13
ReportermsvAssigned Tomsv 
PrioritynormalSeveritycrash 
Status verifiedResolutionfixed 
Product Version7.7.0 
Target Version7.7.1 
Summary0033304: Modeling Data - Floating point signal when converting a B-spline curve to analytical form
DescriptionThe static function ConicDefinition defined in the file GeomConvert_CurveToAnaCurve.cxx causes floating point exception, when calling sqrt with negative argument, when converting the attached B-spline curve to analytical form.
Steps To Reproducebinrestore bug33304_bspl_curv.bbrep a
mkcurve c a
tocanon r c

#An exception was caught 000001FA06082BE0 : Standard_NumericError: FLT INVALID OPERATION
TagsNo tags attached.
Test case number

Attached Files

  • bug33304_bspl_curv.bbrep (491 bytes)

Activities

msv

2022-12-27 16:35

developer   ~0112753

The file to reproduce. It has been also put in the model repository.

msv

2022-12-27 17:06

developer   ~0112754

bug33304_bspl_curv.bbrep (491 bytes)

git

2022-12-27 22:34

administrator   ~0112755

Branch CR33304 has been created by msv.

SHA-1: ccae566b0b0e24060b3995becb17331f1341221b


Detailed log of new commits:

Author: msv
Date: Tue Dec 27 22:19:11 2022 +0300

    0033304: Modeling Data - Floating point signal when converting a B-spline curve to analytical form
    
    Protect the static function ConicDefinition from calling sqrt with negative argument.

msv

2022-12-27 23:21

developer   ~0112756

Test results http://jenkins-test-10.nnov.opencascade.com/view/CR33304-master-MSV/view/COMPARE/

msv

2022-12-27 23:22

developer   ~0112757

Branch CR33304 is ready for review.

akaftasev

2022-12-29 12:58

developer   ~0112761

No remarks.

Please integrate branch:
OCCT - CR33304

git

2023-01-09 07:24

administrator   ~0112786

Branch CR33304 has been deleted by mnt.

SHA-1: ccae566b0b0e24060b3995becb17331f1341221b

Related Changesets

occt: master 42e4ae96

2022-12-27 22:19:11

msv


Committer: vglukhik Details Diff
0033304: Modeling Data - Floating point signal when converting a B-spline curve to analytical form

Protect the static function ConicDefinition from calling sqrt with negative argument.
Affected Issues
0033304
mod - src/GeomConvert/GeomConvert_CurveToAnaCurve.cxx Diff File
add - tests/bugs/moddata_3/bug33304 Diff File

Issue History

Date Modified Username Field Change
2022-12-27 16:29 msv New Issue
2022-12-27 16:29 msv Assigned To => msv
2022-12-27 16:33 msv Steps to Reproduce Updated
2022-12-27 16:35 msv Note Added: 0112753
2022-12-27 16:35 msv File Added: bug33304_bspl_curv.draw
2022-12-27 17:06 msv Steps to Reproduce Updated
2022-12-27 17:06 msv File Deleted: bug33304_bspl_curv.draw
2022-12-27 17:06 msv Note Added: 0112754
2022-12-27 17:06 msv File Added: bug33304_bspl_curv.bbrep
2022-12-27 22:16 msv Status new => assigned
2022-12-27 22:34 git Note Added: 0112755
2022-12-27 23:21 msv Note Added: 0112756
2022-12-27 23:22 msv Assigned To msv => akaftasev
2022-12-27 23:22 msv Status assigned => resolved
2022-12-27 23:22 msv Note Added: 0112757
2022-12-29 12:58 akaftasev Assigned To akaftasev => bugmaster
2022-12-29 12:58 akaftasev Status resolved => reviewed
2022-12-29 12:58 akaftasev Note Added: 0112761
2023-01-09 07:17 vglukhik Changeset attached => occt master 42e4ae96
2023-01-09 07:17 msv Assigned To bugmaster => msv
2023-01-09 07:17 msv Status reviewed => verified
2023-01-09 07:17 msv Resolution open => fixed
2023-01-09 07:24 git Note Added: 0112786
2023-03-07 14:13 dpasukhi Severity minor => crash