0033304: Modeling Data - Floating point signal when converting a B-spline curve to analytical form

Protect the static function ConicDefinition from calling sqrt with negative argument.